hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__array.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  let a = [1, 2, 4,];
  ret 5;
}
