hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__array_access_ret.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f() = {
  a[if true {
    ret 1;
  }
  else {
    ret 2;
  }]
}
