hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__array_value_always_ret.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  let a = [1, if true {
    ret 2;
  }
  else {
    ret 3;
  }, 4,];
  5;
}
