hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__explicit_return.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret 42;
}

