hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__if_condition_returns.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
if if true {
  ret 42;
}
else {
  ret 43;
} {
}
