hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__if_empty_branches.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f() = {
  ret if true {
  }
  else {
  };
}
