hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__implicit_return_after_statement.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f(n: number) = {
  let a = 1;
  ret ;
}
