hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__implicit_return_if.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  if c {
    42;
  }
  ret 43;
}

