hir/src/passes/snapshots/transmute_hir__passes__implicit_ret_converter__tests__namespace.snap
---
source: hir/src/passes/implicit_ret_converter.rs
expression: w
---
namespace name {
  let f(): number = {
    ret 1;
  }
}
